--- a/English_App/templates/English_App/login.html
+++ b/English_App/templates/English_App/login.html
@@ -30,7 +30,7 @@
     </label>
 
     <div >
-        <button type="button" class="cancelbtn" ><a href="{% url 'home' %}">Cancel</a></button>
+        <button type="button" class="cancelbtn" ><a href="{% url 'index' %}">Cancel</a></button>
        
         <br>
        
