--- a/English_App/templates/English_App/register.html
+++ b/English_App/templates/English_App/register.html
@@ -50,7 +50,7 @@
     <div class="" id="already">
         <p>Already have an account? <a href="{% url 'login' %}">Sign in</a>.</p>
         <br>
-        <a class="btn btn-sm btn-info"  href="{% url 'home' %}">Back home</a><br>
+        <a class="btn btn-sm btn-info"  href="{% url 'index' %}">Back home</a><br>
        
       
       </div>
