--- a/English_App/templates/English_App/index.html
+++ b/English_App/templates/English_App/index.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li> <a href="{% url 'index' %}">home</a></li>
+                        <li> <a href="{% url 'index' %}">home today</a></li>
                         <li><a href="{% url 'courseDetail' %}">Courses</a></li>
                         {% if user.is_authenticated and user.is_staff and user.is_superuser%}
                         <li> <a href="{% url 'AddCourse' %}">Add <br>Course</a></li>
