--- a/English_App/templates/English_App/navbar.html
+++ b/English_App/templates/English_App/navbar.html
@@ -8,7 +8,7 @@
         <li> <a href="{% url 'AddCourse' %}">Add Course</a></li>
         {% endif %}
        
-        <li> <a href="{% url 'upload_video' %}">Videoses</a></li>
+        <li> <a href="{% url 'upload_video' %}">Videoseses</a></li>
         
        
         <li><a href="{% url 'addfile' %}">Files</a></li>
