--- a/English_App/static/css/test.css
+++ b/English_App/static/css/test.css
@@ -240,7 +240,7 @@ float: left;
 
   .card-image {
     grid-area: image;
-    background: url("img1.jpg");
+    background: red;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     background-size: cover;
@@ -295,7 +295,7 @@ float: left;
 .hero{
     height: 100%;
     width: 100%;
-  background-image:  url(../images/zalij.jpg);
+  
     background-position: center;
    
     position: absolute;
