--- a/English_App/templates/English_App/index.html
+++ b/English_App/templates/English_App/index.html
@@ -39,7 +39,7 @@
                         <li> <a href="{% url 'AddCourse' %}">Add <br>Course</a></li>
                         {% endif %}
                      
-                        <li> <a href="{% url 'upload_video' %}">Videos</a></li>
+                        <li> <a href="{% url 'upload_video' %}">Videoses</a></li>
                         
                        
                         <li><a href="{% url 'addfile' %}">Files</a></li>
