--- a/English_App/templates/English_App/Add_Courses.html
+++ b/English_App/templates/English_App/Add_Courses.html
@@ -8,7 +8,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link  rel="stylesheet" type="text/css"  href="{% static '/css/test.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <title>Add courses</title>
 </head>
 <body id="userarticlebody">
     <form method="POST">
