--- a/English_App/templates/English_App/Courses_List.html
+++ b/English_App/templates/English_App/Courses_List.html
@@ -24,7 +24,7 @@
             <br>
             <br>
             {% if user.is_authenticated and user.is_staff and user.is_superuser%}
-          <a class="btn btn-sm btn-danger" id="videodeletebutton" href="{% url 'deleteCourse' x.id %}">Delete</a>
+          <a class="btn btn-sm btn-danger" id="videodeletebutton" href="{% url 'deleteCourse' x.id %}"><span class="glyphicon glyphicon-trash"></span>Delete</a>
         {% endif %}
         </div>
       </div>
