--- a/English_App/templates/English_App/display_users_list.html
+++ b/English_App/templates/English_App/display_users_list.html
@@ -42,7 +42,7 @@
                                 <td><a class="btn btn-sm btn-info" href="{% url 'updateUser' i.id %}">Update</a></td>
                                 
 
-                                <td><a class="btn btn-sm btn-danger" href="{% url 'deleteUsers' i.id  %}">Delete</a></td>
+                                <td><a class="btn btn-sm btn-danger" href="{% url 'deleteUsers' i.id  %}"><span class="glyphicon glyphicon-trash"></span>Delete</a></td>
 								
                                
                                 
