--- a/English_App/templates/English_App/video.html
+++ b/English_App/templates/English_App/video.html
@@ -26,7 +26,7 @@
         {% csrf_token %}
         {% if user.is_authenticated  and user.is_superuser%}
         {{video_form.as_table}}
-        <button class="btn btn-primary"  >Upload here</button>
+        <button class="btn-primary"  >Upload here</button>
         {% endif %}
         </form>
         </div >
@@ -47,7 +47,7 @@
               <p class="card-text">{{x.caption}}</p>
               
               {% if user.is_authenticated and user.is_staff and user.is_superuser%}
-              <a class="btn btn-sm btn-danger" id="videodeletebutton" href="{% url 'deleteVideo' x.id %}">Delete</a>
+              <a class="btn btn-sm btn-danger" id="videodeletebutton" href="{% url 'deleteVideo' x.id %}"><span class="glyphicon glyphicon-trash"></span>Delete</a>
               {% endif %}
               
             </div>
